<resources>
    <string name="feedback_library">Feedback Library</string>
    <string name="annotate_image_activity">Annotate Image</string>
    <string name="feedback_check_network_state">Check network state</string>
    <string name="feedback_send_confirmation">By sending the feedback, you agree with the terms and conditions.</string>
    <string name="feedback_send">Send feedback</string>
    <string name="feedback_success">Your feedback was sent successfully. Thank you!</string>
    <string name="feedback_text_warning">"Text cannot be longer than %1$d characters"</string>
    <string name="audio_hint">Express your feedback with a short audio message</string>
    <string name="audio_default_current_duration">0:00</string>
    <string name="audio_default_total_duration">0:00/-</string>
    <string name="audio_record_indicator">RECORDING!</string>
    <string name="audio_maximum_length_reached_text">"Recording stopped because the limit of %1$d seconds is reached"</string>
    <string name="audio_stopped_recording_text">Stopped recording</string>
    <string name="screenshot_choose">Choose from library</string>
    <string name="screenshot_select">Select an image</string>
    <string name="screenshot_add">Add</string>
    <string name="screenshot_edit">Edit</string>
    <string name="screenshot_remove">Remove</string>
    <string name="image_annotation_color_picker">Color Picker</string>
    <string name="image_annotation_blur">Blur</string>
    <string name="image_annotation_normal_mode">Normal</string>
    <string name="image_annotation_fill">Fill</string>
    <string name="image_annotation_stroke">Stroke</string>
    <string name="image_annotation_black">Black</string>
    <string name="image_annotation_color">Color</string>
    <string name="image_annotation_finish">Finish annotation</string>
    <string name="image_annotation_cancel">Cancel annotation</string>
    <string name="image_annotation_chosen_color">Chosen color</string>
    <string name="image_annotation_crop">Crop</string>
    <string name="image_annotation_favorite">Favorite</string>
    <string name="image_annotation_quick_edit">Quick edit</string>
    <string name="sticker">Express your sentiment</string>
    <string name="sticker_smiley">Smiley</string>
    <string name="sticker_thumb_up">Thumb up</string>
    <string name="sticker_thumb_down">Thumb down</string>
    <string name="sticker_dissatisfied">Dissatisfied</string>
    <string name="sticker_neutral">Neutral</string>
    <string name="sticker_satisfied">Satisfied</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_close">Close</string>
    <string name="info_error">Something went wrong! Please try again later.</string>
    <string name="crop_image_menu_crop">@string/image_annotation_crop</string>
    <string name="loading_text">loading&#8230;</string>
    <string name="hub_feedback_list">Show\nFeedback</string>
    <string name="hub_feedback_user_level">User-Level\n%1$d</string>
    <string name="hub_feedback_settings">Feedback\nSettings</string>
    <string name="hub_feedback_create">Create\nFeedback</string>
    <string name="hub_feedback_developer_list">Show\nFeedback\n(Developer)</string>
    <string name="hub_feedback_status_label">Hub-Status</string>
    <string name="hub_feedback_list_label">Show Feedback</string>
    <string name="hub_feedback_user_lvl_label">User-Level</string>
    <string name="hub_feedback_settings_label">Feedback Settings</string>
    <string name="hub_feedback_create_label">Create Feedback</string>
    <string name="hub_feedback_info_label">Tutorial Info-Bubble</string>
    <string name="hub_feedback_status_info">This field will summarize your statistics.\nUser-level 2 required.</string>
    <string name="hub_feedback_list_info">This button lets you access the feedback for this app.\nUser-level 1 required.</string>
    <string name="hub_feedback_user_lvl_info">This button lets you register an account and thereby increase your user-level which you need to access certain functions.</string>
    <string name="hub_feedback_settings_info">Use this button to change settings regarding notifications and other cool stuff!\nUser-level 2 required.</string>
    <string name="hub_feedback_create_info">Create your own feedback by using this button.\nUser-level 2 required.</string>
    <string name="hub_feedback_info_info">This bubble will guide you through this application\'s feedback functionality.\nTap on it to continue!</string>
    <string name="hub_status">&lt;b>&lt;font color="#secondaryColorString">Feedback-Hub&lt;/font>&lt;/b>&lt;br/>&lt;br/>&lt;b>
        &lt;font color="#primaryColorString">User-Name&lt;/font>
        &lt;br/>&lt;/b>&lt;font color="#secondaryColorString"> %1$s&lt;/font>&lt;br/>&lt;b>
        &lt;font color="#primaryColorString">Karma-Score&lt;/font>
        &lt;br/>&lt;/b>&lt;font color="#secondaryColorString"> %2$d&lt;/font>&lt;br/>&lt;b>
        &lt;font color="#primaryColorString">Feedback&lt;/font>
        &lt;br/>&lt;/b>&lt;font color="#secondaryColorString"> %3$d&lt;/font>&lt;br/>&lt;b>
        &lt;font color="#primaryColorString">Responses&lt;/font>
        &lt;br/>&lt;/b>&lt;font color="#secondaryColorString"> %4$d&lt;/font>&lt;br/>&lt;b>
        &lt;font color="#primaryColorString">Up-Votes&lt;/font>
        &lt;br/>&lt;/b>&lt;font color="#secondaryColorString"> %5$d&lt;/font>&lt;br/>&lt;b>
        &lt;font color="#primaryColorString">Down-Votes&lt;/font>
        &lt;br/>&lt;/b>&lt;font color="#secondaryColorString"> %6$d&lt;/font></string>
    <string name="hub_access_1">Accessing Level 1</string>
    <string name="hub_access_1_description">Level 1 grants you access to others feedback and requires permissions for internet-access!</string>
    <string name="hub_confirm">Confirm</string>
    <string name="hub_access_2">Accessing Level 2</string>
    <string name="hub_access_2_description">Level 2 grants you the ability to create feedback and requires storage read/write-permissions and a username with at least %1$d and at most %2$d characters!</string>
    <string name="hub_access_2_and_3_description">Level 2 and 3 grant you the ability to create feedback yourself and allows you access to more advanced feedback mechanisms such as notifications. These features require a username with at least %1$d and at most %2$d characters!</string>
    <string name="hub_access_2_fail">The connection to the server could not be established. Please try again later.</string>
    <string name="hub_warning_username_too_short">Username too short!</string>
    <string name="hub_access_3">Accessing Level 3</string>
    <string name="hub_access_3_description">Level 3 grants you access to more advanced feedback mechanisms such as notifications and needs audio recording permissions!</string>
    <string name="hub_username_restored">User restored: "%1$s".</string>
    <string name="hub_username_registered">User "%1$s" registered.</string>
    <string name="hub_developer_registered">Developer "%1$s" registered.</string>
    <string name="hub_warning_permission_not_granted">Permissions for next level not granted!</string>
    <string name="list_button_mine">Mine</string>
    <string name="list_button_top">Top</string>
    <string name="list_button_hot">Hot</string>
    <string name="list_button_new">New</string>
    <string name="list_filter">Filter</string>
    <string name="list_edit_search">Search</string>
    <string name="list_date">Date: %1$s</string>
    <string name="list_responses">(%1$d Responses)</string>
    <string name="list_alert_event">Could not process the event from to the server.</string>
    <string name="list_alert_server">Could not establish a connection to the server.</string>
    <string name="list_alert_user_level">Increase your user-level to participate!</string>
    <string name="list_tutorial_title_category">Category Tabs</string>
    <string name="list_tutorial_title_search">Search Field</string>
    <string name="list_tutorial_title_filter">Filter Options</string>
    <string name="list_tutorial_title_list">Feedback List</string>
    <string name="list_tutorial_content_list">Here you will see a list of already created feedback. In this case, the list is most likely empty because you\'re currently in your own feedback category. By clicking on an existing entry, you will be forwarded to the actual feedback.</string>
    <string name="list_tutorial_content_filter">This option lets you filter out statuses.</string>
    <string name="list_tutorial_content_search">You can search within the provided feedback list by entering a search term here.</string>
    <string name="list_tutorial_content_category">There are four available categories: MINE, TOP, HOT and NEW. The first one shows only feedback that you provided while the other ones sort all the existing feedback according to number of comments, number of votes or date.</string>
    <string name="developer_list_button_private">Private</string>
    <string name="developer_list_button_reported">Reported</string>
    <string name="details_minus">-</string>
    <string name="details_plus">+</string>
    <string name="details_send_response">Send Response</string>
    <string name="details_cancel">Cancel</string>
    <string name="details_response">Add Response</string>
    <string name="details_subscribe">Subscribe</string>
    <string name="details_report">Report</string>
    <string name="details_unsubscribe">Unsubscribe</string>
    <string name="details_images">Image</string>
    <string name="details_audio">Audio</string>
    <string name="details_audio_stop">Stop</string>
    <string name="details_tags">Tags</string>
    <string name="details_user">User: %1$s</string>
    <string name="details_status">Status: %1$s</string>
    <string name="details_title">Title: %1$s</string>
    <string name="details_response_too_short">Response too short.</string>
    <string name="details_make_public">Make Feedback Public</string>
    <string name="details_make_public_title">Confirm Feedback Publishing</string>
    <string name="details_make_public_content">Do you want to publish this feedback?\nA published feedback can be seen, rated and responded upon by other users and developers.\nThis decision cannot be reverted.</string>
    <string name="details_report_title">Report Feedback</string>
    <string name="details_report_content">Enter a short summary with a length between %1$d and %2$d character to describe your report:</string>
    <string name="details_report_sent">Report sent, thank you!</string>
    <string name="details_report_not_sent">Report could not be sent, try again later!</string>
    <string name="details_report_error_empty">Description empty!</string>
    <string name="details_report_error_short">Description too short!</string>
    <string name="details_report_error_long">Description too long!</string>
    <string name="details_developer_award_karma">Award Karma</string>
    <string name="details_developer_delete">Delete</string>
    <string name="details_developer_revoke_karma">Revoke Karma</string>
    <string name="details_developer_context">Context</string>
    <string name="identity_input_title">Input Feedback-Title here&#8230;</string>
    <string name="identity_input_tags">Input Feedback-Tags here&#8230;</string>
    <string name="identity_next">Next</string>
    <string name="identity_recommendations">Recommendations:</string>
    <string name="identity_tag_handling">Pressing SPACE or ENTER will add your tag. Recommended tags can be added by tapping on them. Tap on an already added tag to modify it.</string>
    <string name="identity_back">Back</string>
    <string name="identity_introduction">Begin your feedback-creation with choosing a title and adding some tags!</string>
</resources>