<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/identity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="9">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="9">

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="7"
                android:weightSum="5">

                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/identity_text_info_1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/identity_introduction"/>
                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/identity_edit_title"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:nextFocusDown="@id/identity_edit_tag"
                    android:text="@string/identity_input_title"/>
                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:weightSum="10">

            <Button
                android:id="@+id/identity_button_back"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:layout_margin="2dp"
                android:onClick="onButtonClicked"
                android:text="@string/identity_back"/>
            <com.nex3z.flowlayout.FlowLayout
                android:id="@+id/identity_container_tags"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="6">
            </com.nex3z.flowlayout.FlowLayout>
            <Button
                android:id="@+id/identity_button_next"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:layout_margin="2dp"
                android:onClick="onButtonClicked"
                android:text="@string/identity_next"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4"
            android:weightSum="9">

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="7"
                android:weightSum="7">

                <TextView
                    android:id="@+id/identity_text_info_2"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/identity_recommendations"/>
                <com.nex3z.flowlayout.FlowLayout
                    android:id="@+id/identity_container_recommendations"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1">
                </com.nex3z.flowlayout.FlowLayout>
                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/identity_edit_tag"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:inputType="textEmailAddress"
                    android:text="@string/identity_input_tags"
                    />
                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/identity_text_info_3"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/identity_tag_handling"/>
                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/identity_focus_sink"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" />
</RelativeLayout>