<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="50">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:weightSum="12">

            <Button
                android:id="@+id/list_button_mine"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="@drawable/blue_tab"
                android:text="@string/list_button_mine"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/list_button_top"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="@drawable/gray_tab"
                android:text="@string/list_button_top"
                android:textColor="@color/indigo" />

            <Button
                android:id="@+id/list_button_hot"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="@drawable/gray_tab"
                android:text="@string/list_button_hot"
                android:textColor="@color/indigo" />

            <Button
                android:id="@+id/list_button_new"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="@drawable/gray_tab"
                android:text="@string/list_button_new"
                android:textColor="@color/indigo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/blue_square"
            android:orientation="horizontal"
            android:weightSum="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/blue_square"
            android:orientation="horizontal"
            android:weightSum="22">

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2" />

            <LinearLayout
                android:id="@+id/list_edit_focus_sink"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal" />

            <EditText
                android:id="@+id/list_edit_search"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="18"
                android:background="@color/white"
                android:maxLines="1"
                android:nextFocusLeft="@id/list_edit_search"
                android:nextFocusUp="@id/list_edit_search"
                android:padding="1dp"
                android:selectAllOnFocus="true"
                android:text="@string/list_edit_search" />

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/blue_square"
            android:orientation="horizontal"
            android:weightSum="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="@drawable/blue_square"
            android:orientation="horizontal"
            android:weightSum="22">

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <ScrollView
                android:id="@+id/list_view_scroll"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="20">

                <LinearLayout
                    android:id="@+id/list_layout_scroll"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/blue_square"
            android:orientation="horizontal"
            android:weightSum="1" />
    </LinearLayout>

</android.support.v7.widget.ContentFrameLayout>